--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <title>快得力廣告</title>
 <meta name="description" content="" />
-<meta name="keywords" content="" />
+<meta name="keywords" content="台中廣告, 台中招牌" />
 <link rel="stylesheet" type="text/css" href="style/css/animate.min.css" />
 <link rel="stylesheet" type="text/css" href="style/css/css.css" />
 <link rel="stylesheet" type="text/css" href="style/css/in.css" />
@@ -31,7 +31,7 @@
       <h1> <a href="index.html" title="快得力廣告" style="color: #f39800"><img src="images/logo1.png" alt="快得力廣告" border="0"></a></h1>
       <!-- <p>www.qdesign.com.tw</p> -->
     </div>
-    <div class="biaoyu">Quickly / Powerfully / Creatively<p>上百件企業連鎖招牌實績</p></div>
+    <div class="biaoyu">台中 廣告招牌/造型燈箱<p>上百件企業連鎖招牌實績</p></div>
     <div class="iphone fr">
       <p> 諮詢熱線： <span>04-23829500</span></p>
     </div>
@@ -70,8 +70,8 @@
   </div>
   <div class="bd">
     <ul>
-     <li style="background:url(images/ban002.jpg) no-repeat center center"> <!-- <a target="_blank" href="products/index.html" title=""></a> --> </li>
-<li style="background:url(images/ban001.jpg) no-repeat center center"> <!-- <a target="_blank" href="products/index.html" title=""></a> --> </li>
+     <li style="background:url(images/ban01.jpg) no-repeat center center"> <!-- <a target="_blank" href="products/index.html" title=""></a> --> </li>
+<li style="background:url(images/small.jpg) no-repeat center center"> <!-- <a target="_blank" href="products/index.html" title=""></a> --> </li>
 
     </ul>
   </div>
@@ -279,6 +279,79 @@
   </div>
 </div>
 
+<div class="mainall">
+  <div class="news_left fl wow bounceInLeft">
+    <div class="news_nav">
+     <h3 rel="#new01"><a href="#">最新消息</a></h3>
+      <!-- <span>/</span> -->
+      <!-- <h3 rel="#new02"><a href="#" >行业热点</a></h3> -->
+    </div>
+    <div class="clearboth"></div>
+    <div class="news_n none" id="new01">
+      <div class="news_pic "> <a href="#" title=""><img src="images/010.png" alt="" /></a> <a href="#" title="" class="t">本公司榮獲臺中市商業會表揚為2016年優良企業</a>
+      </div>
+      <div class="news_info">
+        <ul>
+          <li><a href="#" title="">本公司榮獲臺中市政府表揚為優良企業</a><!-- <span>2019-06-04</span> --></li>
+          <li><a href="#" title="">榮獲2013年第二屆全國廣告工程設計比賽(優勝獎)</a><!-- <span>2019-06-04</span> --></li>
+          <li><a href="#" title="">榮獲2011年第一屆中華民國廣告招牌應用設計比賽決賽入圍</a><!-- <span>2019-06-04</span> --></li>
+        </ul>
+      </div>
+    </div>
+    <!-- <div class="news_n none" id="new02"> 
+      <div class="news_pic ">
+       <div class="news_pic "> <a href="xinwen/redian/37.html" title="高端门窗有什么不一样"><img src="images/n2.jpg" alt="高端门窗有什么不一样" /></a> <a href="xinwen/redian/37.html" title="高端门窗有什么不一样" class="t">高端门窗有什么不一样</a> </div>
+      </div>
+      <div class="news_info">
+        <ul>
+          <li><a href="xinwen/redian/37.html" title="高端门窗有什么不一样">高端门窗有什么不一样</a><span>2019-06-04</span></li>
+          <li><a href="xinwen/redian/36.html" title="搭建系统阳光房选择位置的重要性">搭建系统阳光房选择位置的重要性</a><span>2019-06-04</span></li>
+          <li><a href="xinwen/redian/34.html" title="建造雨棚通常用到的材质有哪些？">建造雨棚通常用到的材质有哪些？</a><span>2019-06-04</span></li>
+        </ul>
+      </div>
+    </div> -->
+  </div>
+  <div class="cjwq fr wow bounceInRight">
+    <div class="cjwq_nav">
+     <h3><a href="#" title="">你可能會想看</a></h3>
+      <a href="#" title="more+" class="more">了解更多</a> </div>
+    <div class="clearboth"></div>
+    <div class="cjwq_n">
+      <div class="bd">
+        <ul>
+          <li>
+            <dt><a href="#" title=""><img src="images/n1.jpg" alt="" /></a></dt>
+            <dd><a href="#" title="" class="news_a">本公司獲臺中市政府表揚</a>
+              <p>本公司榮獲臺中市政府表揚為105優良企業</p>
+            </dd>
+          </li>
+          <li>
+            <dt><a href="#" title=""><img src="images/n3.jpg" alt="" /></a></dt>
+            <dd><a href="#" title="" class="news_a">榮獲2013年全國廣告工程設計比賽</a>
+              <p>本公司榮獲第二屆全國廣告工程設計比賽(優勝獎)</p>
+            </dd>
+          </li>
+          <li>
+            <dt><a href="#" title=""><img src="images/n4.jpg" alt="" /></a></dt>
+            <dd><a href="#" title="" class="news_a">中華民國廣告招牌應用設計比賽決賽入圍</a>
+              <p>本公司榮獲2011年廣告招牌應用設計比賽決賽入圍</p>
+            </dd>
+          </li>
+          <!-- <li>
+            <dt><a href="xinwen/xhjd/1.html" title="车棚具有的三大优点有哪些？"><img src="uploads/allimg/190601/1629533201-0-lp.jpg" alt="车棚具有的三大优点有哪些？" /></a></dt>
+            <dd><a href="xinwen/xhjd/1.html" title="车棚具有的三大优点有哪些？" class="news_a">车棚具有的三大优点有哪些？</a>
+              <p>具有的三大优点有哪些？ 说起车棚，许多人认为它仅仅是一个停放车辆的场所而已，其实它优点可多着呢，远远没有你想象的那么简单。 首先，较基本的优点就是能够为车子遮风挡雨...</p>
+            </dd>
+          </li> -->
+        </ul>
+      </div>
+    </div>
+    <script type="text/javascript">
+      jQuery(".cjwq_n").slide({titCell:".hd ul",mainCell:".bd ul",autoPage:true,effect:"topLoop",autoPlay:true,vis:3});
+    </script> 
+  </div>
+</div>
+
 <!-- <div class="mainall">
   <div class="case_t tc mt40">
     <h3><a href="anli/index.html" title="经典案例">经典案例
@@ -371,7 +444,7 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
   <div class="honor fr mt40 wow bounceInRight">
     <div class="case_t tc">
       <h3><a href="gongsi/rongyu/index.html" title="合作夥伴" style="color: #f39800">合作夥伴<!-- gongsi/rongyu -->
-        <p style="color: #f39800">Partner</p>
+        <!-- <p style="color: #f39800">Partner</p> -->
         </a></h3>
     </div>
     <div class="honor_n">
@@ -403,8 +476,8 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
   </div>
   <div class="kehu fl mt40 wow bounceInLeft">
     <div class="case_t tc">
-     <h3><a href="#" title="最新消息" style="color: #f39800">最新消息<!-- kfjz -->
-        <p>News</p>
+     <h3 style="text-align: left;"><a href="#" title="最新消息" style="color: #f39800; text-align: left;">產品案例<!-- kfjz -->
+        <!-- <p>Case</p> -->
         </a></h3>
     </div>
     <div class="kehu_n">
@@ -426,77 +499,7 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
   </div>
 </div>
 
-<!-- <div class="mainall">
-  <div class="news_left fl wow bounceInLeft">
-    <div class="news_nav">
-     <h3 rel="#new01"><a href="xinwen/meiti/index.html" >媒体报道</a></h3>
-      <span>/</span>
-      <h3 rel="#new02"><a href="xinwen/redian/index.html" >行业热点</a></h3>
-    </div>
-    <div class="clearboth"></div>
-    <div class="news_n none" id="new01">
-      <div class="news_pic "> <a href="xinwen/meiti/35.html" title="如何巧用空调为系统阳光房降温？"><img src="uploads/allimg/190604/154Z5C63-0-lp.jpg" alt="如何巧用空调为系统阳光房降温？" /></a> <a href="xinwen/meiti/35.html" title="如何巧用空调为系统阳光房降温？" class="t">如何巧用空调为系统阳光房降温？</a> </div>
-      <div class="news_info">
-        <ul>
-         <li><a href="xinwen/meiti/35.html" title="如何巧用空调为系统阳光房降温？">如何巧用空调为系统阳光房降温？</a><span>2019-06-04</span></li>
-         <li><a href="xinwen/meiti/31.html" title="你知道定制哪类的车棚吗">你知道定制哪类的车棚吗</a><span>2019-06-04</span></li>
-        <li><a href="xinwen/meiti/30.html" title="雨棚有哪些形式？其中材料有什么特征？">雨棚有哪些形式？其中材料有什么特征？</a><span>2019-06-04</span></li>
-        </ul>
-      </div>
-    </div>
-    <div class="news_n none" id="new02"> 
-      <div class="news_pic ">
-       <div class="news_pic "> <a href="xinwen/redian/37.html" title="高端门窗有什么不一样"><img src="uploads/allimg/190604/15522WO7-0-lp.jpg" alt="高端门窗有什么不一样" /></a> <a href="xinwen/redian/37.html" title="高端门窗有什么不一样" class="t">高端门窗有什么不一样</a> </div>
-      </div>
-      <div class="news_info">
-        <ul>
-          <li><a href="xinwen/redian/37.html" title="高端门窗有什么不一样">高端门窗有什么不一样</a><span>2019-06-04</span></li>
-          <li><a href="xinwen/redian/36.html" title="搭建系统阳光房选择位置的重要性">搭建系统阳光房选择位置的重要性</a><span>2019-06-04</span></li>
-          <li><a href="xinwen/redian/34.html" title="建造雨棚通常用到的材质有哪些？">建造雨棚通常用到的材质有哪些？</a><span>2019-06-04</span></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="cjwq fr wow bounceInRight">
-    <div class="cjwq_nav">
-     <h3><a href="xinwen/xhjd/index.html" title="疑惑解答">疑惑解答</a></h3>
-      <a href="xinwen/xhjd/index.html" title="more+" class="more">more+</a> </div>
-    <div class="clearboth"></div>
-    <div class="cjwq_n">
-      <div class="bd">
-        <ul>
-          <li>
-            <dt><a href="xinwen/xhjd/6.html" title="你知道系统阳光房和普通阳光房的区别吗"><img src="uploads/allimg/190601/163I3Oa-0-lp.jpg" alt="你知道系统阳光房和普通阳光房的区别吗" /></a></dt>
-            <dd><a href="xinwen/xhjd/6.html" title="你知道系统阳光房和普通阳光房的区别吗" class="news_a">你知道系统阳光房和普通阳光房的区别吗</a>
-              <p>已经成为时尚人士追求的建筑，越来越多的人开始崇尚自然，所以这也是阳光房在未来的发展趋势，那么下面我们就来了解了解成都阳光房的种类区别。 阳光房是采用玻璃与金属框架搭...</p>
-            </dd>
-          </li>
-          <li>
-            <dt><a href="xinwen/xhjd/5.html" title="如何防止成都铝合金露台棚老化？"><img src="uploads/allimg/190601/1636315C0-0-lp.jpg" alt="如何防止成都铝合金露台棚老化？" /></a></dt>
-            <dd><a href="xinwen/xhjd/5.html" title="如何防止成都铝合金露台棚老化？" class="news_a">如何防止成都铝合金露台棚老化？</a>
-              <p>雨棚在使用的同时，能够达到遮风挡雨的保护效果，当然为了能够，让雨棚的使用更为，安全可靠，因此一定要注意，防止雨棚的老化问题。 那么如何让雨棚，能够更安全，持久的进行...</p>
-            </dd>
-          </li>
-          <li>
-            <dt><a href="xinwen/xhjd/2.html" title="城市建设中设置成都雨棚的重要性"><img src="uploads/allimg/190601/1634322032-0-lp.jpg" alt="城市建设中设置成都雨棚的重要性" /></a></dt>
-            <dd><a href="xinwen/xhjd/2.html" title="城市建设中设置成都雨棚的重要性" class="news_a">城市建设中设置成都雨棚的重要性</a>
-              <p>在城市建设中，自行车棚 是不可缺少的设置。因此成为了人们生活中，不可缺少的一部分，为人们带来了更多的方便。而现如今，伴随着自行车棚的增多，因此车棚的材质，也分为更多...</p>
-            </dd>
-          </li>
-          <li>
-            <dt><a href="xinwen/xhjd/1.html" title="车棚具有的三大优点有哪些？"><img src="uploads/allimg/190601/1629533201-0-lp.jpg" alt="车棚具有的三大优点有哪些？" /></a></dt>
-            <dd><a href="xinwen/xhjd/1.html" title="车棚具有的三大优点有哪些？" class="news_a">车棚具有的三大优点有哪些？</a>
-              <p>具有的三大优点有哪些？ 说起车棚，许多人认为它仅仅是一个停放车辆的场所而已，其实它优点可多着呢，远远没有你想象的那么简单。 首先，较基本的优点就是能够为车子遮风挡雨...</p>
-            </dd>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <script type="text/javascript">
-      jQuery(".cjwq_n").slide({titCell:".hd ul",mainCell:".bd ul",autoPage:true,effect:"topLoop",autoPlay:true,vis:3});
-    </script> 
-  </div>
-</div> -->
+
 
 <div class="link_bg mt40">
   <div class="mainall">
@@ -547,9 +550,10 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
 <div class="end_dbg">
   <div class="mainall">
     <div class="end_left fl">
-      <div>2019 Quickly Advertising. All Rights Reserved | Design by<a href="http://www.i-arche.com/" title=""> i-Arche</a></div>
-      <p>address：台中市南屯區五權西路三段10巷111-1號</p>
-      <p>phone：04-23829500  Email：quickly@quickly.url.tw</p>
+      <div>2019 Quickly Advertising. All Rights Reserved<!-- | Design by<a href="http://www.i-arche.com/" title=""> i-Arche</a> --></div>
+      <p>04-23829500</p>
+      <!-- address：台中市南屯區五權西路三段10巷111-1號 -->
+      <p>quickly@quickly.url.tw</p>
     </div>
     <div class="end_ewm fr"> <img src="images/logo.png" title="快得力廣告" alt="快得力廣告" /> </div>
   </div>
