--- a/ny.html
+++ b/ny.html
@@ -712,16 +712,16 @@
             <div class="product-layout  product-grid related-pro  owl-carousel mb_50">
               <div class="item">
                 <div class="product-thumb">
-                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/1.jpg" alt="iPod Classic" title="iPod Classic" class="img-responsive"> <img src="images/work/M1.jpg" alt="iPod Classic" title="iPod Classic" class="img-responsive"> </a> </div>
+                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/1.jpg" alt="" title="" class="img-responsive"> <img src="images/work/M1.jpg" alt="" title="" class="img-responsive"> </a> </div>
                   <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="Casual Shirt With Ruffle Hem">圓形燈箱</a></h6>
-                    <div class="rating">
+                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">圓形燈箱</a></h6>
+                    <!-- <div class="rating">
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-x"></i></span>
-                    </div>
+                    </div> -->
                     <!-- <span class="price"><span class="amount"><span class="currencySymbol">$</span>70.00</span>
                     </span> -->
                     <!-- <div class="button-group text-center">
@@ -735,16 +735,16 @@
               </div>
               <div class="item">
                 <div class="product-thumb">
-                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/2.jpg" alt="iPod Classic" title="iPod Classic" class="img-responsive"> <img src="images/work/M2.jpg" alt="iPod Classic" title="iPod Classic" class="img-responsive"> </a> </div>
+                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/2.jpg" alt="" title="" class="img-responsive"> <img src="images/work/M2.jpg" alt="" title="" class="img-responsive"> </a> </div>
                   <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="Casual Shirt With Ruffle Hem">長型燈箱</a></h6>
-                    <div class="rating">
+                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">長型燈箱</a></h6>
+                    <!-- <div class="rating">
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-x"></i></span>
-                    </div>
+                    </div> -->
                     <!-- <span class="price"><span class="amount"><span class="currencySymbol">$</span>70.00</span>
                     </span> -->
                     <!-- <div class="button-group text-center">
@@ -758,16 +758,16 @@
               </div>
               <div class="item">
                 <div class="product-thumb">
-                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/3.jpg" alt="iPod Classic" title="iPod Classic" class="img-responsive"> <img src="images/work/M3.jpg" alt="iPod Classic" title="iPod Classic" class="img-responsive"> </a> </div>
+                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/3.jpg" alt="" title="" class="img-responsive"> <img src="images/work/M3.jpg" alt="" title="" class="img-responsive"> </a> </div>
                   <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="Casual Shirt With Ruffle Hem">玻璃貼</a></h6>
-                    <div class="rating">
+                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">玻璃貼</a></h6>
+                    <!-- <div class="rating">
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-x"></i></span>
-                    </div>
+                    </div> -->
                     <!-- <span class="price"><span class="amount"><span class="currencySymbol">$</span>70.00</span>
                     </span> -->
                     <!-- <div class="button-group text-center">
@@ -781,16 +781,16 @@
               </div>
               <div class="item">
                 <div class="product-thumb">
-                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/4.jpg" alt="iPod Classic" title="iPod Classic" class="img-responsive"> <img src="images/work/M4.jpg" alt="iPod Classic" title="iPod Classic" class="img-responsive"> </a> </div>
+                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/4.jpg" alt="" title="" class="img-responsive"> <img src="images/work/M4.jpg" alt="" title="" class="img-responsive"> </a> </div>
                   <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="Casual Shirt With Ruffle Hem">廣告招牌</a></h6>
-                    <div class="rating">
+                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">廣告招牌</a></h6>
+                    <!-- <div class="rating">
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-x"></i></span>
-                    </div>
+                    </div> -->
                     <!-- <span class="price"><span class="amount"><span class="currencySymbol">$</span>70.00</span>
                     </span> -->
                     <!-- <div class="button-group text-center">
@@ -804,16 +804,16 @@
               </div>
               <div class="item">
                 <div class="product-thumb">
-                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/5.jpg" alt="iPod Classic" title="iPod Classic" class="img-responsive"> <img src="images/work/M5.jpg" alt="iPod Classic" title="iPod Classic" class="img-responsive"> </a> </div>
+                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/5.jpg" alt="" title="" class="img-responsive"> <img src="images/work/M5.jpg" alt="" title="" class="img-responsive"> </a> </div>
                   <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="Casual Shirt With Ruffle Hem">大圖輸出</a></h6>
-                    <div class="rating">
+                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">大圖輸出</a></h6>
+                    <!-- <div class="rating">
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-x"></i></span>
-                    </div>
+                    </div> -->
                     <!-- <span class="price"><span class="amount"><span class="currencySymbol">$</span>70.00</span>
                     </span> -->
                     <!-- <div class="button-group text-center">
@@ -827,16 +827,16 @@
               </div>
               <div class="item">
                 <div class="product-thumb">
-                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/6.jpg" alt="iPod Classic" title="iPod Classic" class="img-responsive"> <img src="images/work/M6.jpg" alt="iPod Classic" title="iPod Classic" class="img-responsive"> </a> </div>
+                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/6.jpg" alt="" title="" class="img-responsive"> <img src="images/work/M6.jpg" alt="" title="" class="img-responsive"> </a> </div>
                   <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="Casual Shirt With Ruffle Hem">印刷廣告</a></h6>
-                    <div class="rating">
+                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">印刷廣告</a></h6>
+                    <!-- <div class="rating">
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-x"></i></span>
-                    </div>
+                    </div> -->
                     <!-- <span class="price"><span class="amount"><span class="currencySymbol">$</span>70.00</span>
                     </span> -->
                     <!-- <div class="button-group text-center">
@@ -883,7 +883,7 @@
           <div class="col-md-3 footer-block">
             <div class="content_footercms_right">
               <div class="footer-contact">
-                <div class="footer-logo mb_40"> <a href="index.html"> <img src="images/logo1.png" alt=""> </a> </div>
+                <div class="footer-logo mb_40"> <a href="index.html"> <img style="width: 80%" src="images/logo1105_2.png" alt=""> </a> </div>
                 <ul>
                   <li>台中市南屯區五權西路三段10巷111-1號</li>
                   <li>04-23829500</li>
