--- a/ny.html
+++ b/ny.html
@@ -552,13 +552,13 @@
             <ul>
               <li><a href="index.html">首頁</a></li>
               <li><a href="#">工程實績</a></li>
-              <li class="active">廣告招牌</li>
+              <li class="active">餐廳</li>
             </ul>
           </div>
           <!-- =====  BREADCRUMB END===== -->
           <div class="row mt_10 ">
             <div class="col-md-6">
-              <div><a class="thumbnails"> <img data-name="product_image" src="images/work/4.jpg" alt="" /></a></div>
+              <div><a class="thumbnails"> <img style="" data-name="product_image" src="images/work/4.jpg" alt="" /></a></div>
 
               <div id="product-thumbnail" class="owl-carousel">
                 <div class="item">
@@ -600,18 +600,18 @@
               <hr>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
-                  <label><a href="#">亞特燈箱</a></label>
-                  <span>圓形燈箱/長型燈箱</span></li>
+                  <label>實績分類</label>
+                  <span> 餐廳</span></li>
                 <li>
-                  <label><a href="#">大圖輸出</a></label>
-                  <span>玻璃貼/帆布</span>
+                  <label><a href="#">使用產品</a></label>
+                  <span>亞特燈箱、LED廣告招牌、大圖廣告</span>
                 </li>
-                <li>
+                <!-- <li>
                   <label><a href="#">廣告招牌</a></label>
-                  <span>印刷廣告</span></li>
+                  <span>印刷廣告</span></li> -->
               </ul>
               <hr>
-              <p class="product-desc mtb_30">中友百貨對面 | 韓式定食料理</p>
+              <p class="product-desc mtb_30">一起肉肉吧是一間位於台中中友百貨商圈對面的韓式定食，豐富的韓式組合、烤肉、料理深獲在地好評</p>
               <!-- <div id="product">
                 <div class="form-group">
                   <div class="row">
@@ -650,13 +650,25 @@
             <div class="col-md-12">
               <div id="exTab5" class="mtb_30">
                 <ul class="nav nav-tabs">
-                  <li class="active"> <a href="#1c" data-toggle="tab">業主需求</a> </li>
+                  <li class="active"> <a href="#1c" data-toggle="tab">產品規格</a> </li>
                   <!-- <li><a href="#2c" data-toggle="tab">Reviews (1)</a> </li> -->
-                  <li><a href="#3c" data-toggle="tab">執行方案</a> </li>
+                  <li><a href="#3c" data-toggle="tab">餐廳簡介</a> </li>
                 </ul>
                 <div class="tab-content mt_20">
                   <div class="tab-pane active" id="1c">
-                    <p>該案場位於中友百貨對面，業主希望呈現輕鬆明亮的風格，並且醒目吸引路過民眾注意。</p>
+                    <p>尺寸：100Ｘ100 / 規格：100cm</p>
+                    <p>這次與韓國燒肉gogigogi店頭行銷是一個將招牌應用很完整的案例，這次的方式，團隊建議裝置戶外廣告、街頭創意燈箱、LOGO字、帆布宣傳，來看看這次亞特文創規劃的廣告招牌各自有哪些特性：</p>
+                    <br>
+                    <p>🔺#戶外大型廣告帆布(背打光)🔺</p>
+                    <p>大型的帆布廣告，放置在戶外有很醒目的行銷效能，並於幾條街外都能清楚判別廣告用途，在專業的製作下擁有高解析度的輸出、色彩鮮艷顯色效果，適用於大版面輸出。</p>
+                    <p>🔺#圓形燈箱🔺</p>
+                    <p>這類型的燈箱廣告很適合吸引過路客，舉凡走在人行道逛街的遊客，包括餐飲、展覽、連鎖飲料、設計店家，適用的商店街小招牌。</p>
+                    <p>🔺#立體發光字🔺</p>
+                    <p>LED發光字源，應用的方面也很廣泛，以LOGO發光燈字為主體，造型多變，強化店頭行銷的記憶點，光源的製程是團隊製作上的。</p>
+                    <p>🔺#帆布廣告🔺</p>
+                    <p>即時性的更換，成本低也符合當季廣告的期待，讓準備前往的顧客觀察到最近店內正走的套餐優惠，很適合一季更換的店家使用。</p>
+                    <br>
+                    <p>亞特文創提供的招牌使用造型多元、宣傳便利，適應於不同地理類型的運用，也給客戶更多的選擇，相信專業團隊，就找亞特文創。</p>
                   </div>
                   <!-- <div class="tab-pane" id="2c">
                     <form class="form-horizontal">
@@ -695,7 +707,10 @@
                     </form>
                   </div> -->
                   <div class="tab-pane" id="3c">
-                    <p>以黃色及紅色作為底色，吸睛度十足；並且使用玻璃貼與壁面印刷，深獲年輕族群好評！</p>
+                    <p>Gogi Gogi 一起肉肉吧</p>
+                    <p>地址：台中市北區三民路三段166-3號</p>
+                    <p>電話：(04) 2223-5085</p>
+                    <p>時間：11:30～22:30</p>
                   </div>
                 </div>
               </div>
@@ -709,10 +724,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="product-layout  product-grid related-pro  owl-carousel mb_50">
+            <div class="product-layout product-grid related-pro owl-carousel mb_50">
               <div class="item">
-                <div class="product-thumb">
-                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/1.jpg" alt="" title="" class="img-responsive"> <img src="images/work/M1.jpg" alt="" title="" class="img-responsive"> </a> </div>
+                <div class="pic">
+                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/1.jpg" alt="" title="" class="img-responsive"></a> </div>
                   <div class="caption product-detail text-left">
                     <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">圓形燈箱</a></h6>
                     <!-- <div class="rating">
@@ -734,8 +749,8 @@
                 </div>
               </div>
               <div class="item">
-                <div class="product-thumb">
-                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/2.jpg" alt="" title="" class="img-responsive"> <img src="images/work/M2.jpg" alt="" title="" class="img-responsive"> </a> </div>
+                <div class="pic">
+                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/2.jpg" alt="" title="" class="img-responsive"></a></div>
                   <div class="caption product-detail text-left">
                     <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">長型燈箱</a></h6>
                     <!-- <div class="rating">
@@ -757,8 +772,8 @@
                 </div>
               </div>
               <div class="item">
-                <div class="product-thumb">
-                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/3.jpg" alt="" title="" class="img-responsive"> <img src="images/work/M3.jpg" alt="" title="" class="img-responsive"> </a> </div>
+                <div class="pic">
+                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/3.jpg" alt="" title="" class="img-responsive"></a> </div>
                   <div class="caption product-detail text-left">
                     <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">玻璃貼</a></h6>
                     <!-- <div class="rating">
@@ -780,8 +795,8 @@
                 </div>
               </div>
               <div class="item">
-                <div class="product-thumb">
-                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/4.jpg" alt="" title="" class="img-responsive"> <img src="images/work/M4.jpg" alt="" title="" class="img-responsive"> </a> </div>
+                <div class="pic">
+                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/4.jpg" alt="" title="" class="img-responsive"></div>
                   <div class="caption product-detail text-left">
                     <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">廣告招牌</a></h6>
                     <!-- <div class="rating">
@@ -803,8 +818,8 @@
                 </div>
               </div>
               <div class="item">
-                <div class="product-thumb">
-                  <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/5.jpg" alt="" title="" class="img-responsive"> <img src="images/work/M5.jpg" alt="" title="" class="img-responsive"> </a> </div>
+                <div class="pic">
+                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/5.jpg" alt="" title="" class="img-responsive"></a> </div>
                   <div class="caption product-detail text-left">
                     <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">大圖輸出</a></h6>
                     <!-- <div class="rating">
@@ -825,29 +840,29 @@
                   </div>
                 </div>
               </div>
-              <div class="item">
+              <!-- <div class="item">
                 <div class="product-thumb">
                   <div class="image product-imageblock"> <a href="#"> <img data-name="product_image" src="images/work/6.jpg" alt="" title="" class="img-responsive"> <img src="images/work/M6.jpg" alt="" title="" class="img-responsive"> </a> </div>
                   <div class="caption product-detail text-left">
                     <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">印刷廣告</a></h6>
-                    <!-- <div class="rating">
+                    <div class="rating">
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                       <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-x"></i></span>
-                    </div> -->
-                    <!-- <span class="price"><span class="amount"><span class="currencySymbol">$</span>70.00</span>
-                    </span> -->
-                    <!-- <div class="button-group text-center">
+                    </div>
+                    <span class="price"><span class="amount"><span class="currencySymbol">$</span>70.00</span>
+                    </span>
+                    <div class="button-group text-center">
                       <div class="wishlist"><a href="#"><span>wishlist</span></a></div>
                       <div class="quickview"><a href="#"><span>Quick View</span></a></div>
                       <div class="compare"><a href="#"><span>Compare</span></a></div>
                       <div class="add-to-cart"><a href="#"><span>Add to cart</span></a></div>
-                    </div> -->
+                    </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
