--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       
         <li><a href='./ny.html'>工程實績/Case</a></li><!-- hzkh -->
 
-        <li><a href='product/index.html'>產品介紹/Product</a></li>
+        <li><a href='product/index.html'>產品項目/Product</a></li>
 
         <li><a href='company/index.html'>報價諮詢/Order</a></li> <!-- (gongsi) -->
 
@@ -115,9 +115,9 @@
 <div class="pro_dbg">
   <div class="mainall1">
     <div class="pro_ct tc">
-     <h2> <a href="1chanpin/index.html" style="color: #f39800"> 產品項目
-        <!-- <p style="color: #f39800">About Product</p> -->
-        </a> </h2>
+     <h2> <a href="1chanpin/index.html" style="color: #f39800"> 產品項目/Product</a>
+        <p style="color: #f39800; margin-top:20px">快得力的重點產品，專業訂製幫助您的店家形象提升</p>
+     </h2>
     </div>
     <div class="clearboth"></div>
     <div class="pro_c">
@@ -222,8 +222,8 @@
   <div class="mainall1">
     <div class="case_t tc">
       <div class="pro_ct tc">
-        <h2> <a href="1chanpin/index.html" style="color: #f39800"> 企業理念
-        <!-- <p style="color: #f39800">Concept</p></a> -->
+        <h2> <a href="1chanpin/index.html" style="color: #f39800"> 企業理念/About</a>
+        <p style="color: #f39800; margin-top: 20px">完整的商業招牌計畫，協助客戶量身訂製店頭的形象</p>
         </h2>
       </div>
     </div>
@@ -272,10 +272,9 @@
 <div class="td_dbg">
   <div class="mainall1 re">
     <div class="td_t tc">
-     <h4><span>品牌顏製所</span>
-        <!-- <p>About Us</p> -->
-      </h4>
+     <h4><span style="font-size: 30px">品牌顏製所/Brand</span></h4>
     </div>
+    <p style="color: #f39800; text-align: center; font-size: 16px; margin-top: 10px">台中在地招牌廣告公司，優秀職人招牌訂製</p>
     <!-- <div class="td_tel ab">
       <p>諮詢熱線：</p>
       <span>04-23829500</span> 
