--- a/index.html
+++ b/index.html
@@ -142,32 +142,32 @@
     <div class="pro_show_n">
       <ul>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/14.html" title="LED廣告招牌" target="_blank"> <img src="images/s1.jpg" onmouseover="this.src='images/s1r.jpg'; "onmouseout="this.src='images/s1.jpg';" alt="LED廣告招牌"/> </a> </div>
+          <div class="pic"> <a href="1chanpin/xtygf/14.html" title="LED廣告招牌" target="_blank"> <img src="images/s1.jpg" alt="LED廣告招牌"/> </a> </div>
           <div class="info"> <a href="1chanpin/xtygf/14.html" title="LED廣告招牌" target="_blank">LED廣告招牌</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/19.html" title="門牌設計製作" target="_blank"> <img src="images/s2.jpg" onmouseover="this.src='images/s2r.jpg'; "onmouseout="this.src='images/s2.jpg';" alt="門牌設計製作"/> </a> </div>
+          <div class="pic"> <a href="1chanpin/xtygf/19.html" title="門牌設計製作" target="_blank"> <img src="images/s2.jpg" alt="門牌設計製作"/> </a> </div>
           <div class="info"> <a href="1chanpin/xtygf/19.html" title="門牌設計製作" target="_blank">門牌設計製作</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/17.html" title="亞特燈箱" target="_blank"> <img src="images/s3.jpg" onmouseover="this.src='images/s3r.jpg'; "onmouseout="this.src='images/s3.jpg';" alt="亞特燈箱"/> </a> </div>
+          <div class="pic"> <a href="1chanpin/xtygf/17.html" title="亞特燈箱" target="_blank"> <img src="images/s3.jpg" alt="亞特燈箱"/> </a> </div>
           <div class="info"> <a href="1chanpin/xtygf/17.html" title="亞特燈箱" target="_blank">亞特燈箱</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/16.html" title="立體字" target="_blank"> <img src="images/s4.jpg" onmouseover="this.src='images/s4r.jpg'; "onmouseout="this.src='images/s4.jpg';" alt="立體字"/> </a> </div>
+          <div class="pic"> <a href="1chanpin/xtygf/16.html" title="立體字" target="_blank"> <img src="images/s4.jpg" alt="立體字"/> </a> </div>
           <div class="info"> <a href="1chanpin/xtygf/16.html" title="立體字" target="_blank">立體字</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/18.html" title="指示牌/標示牌" target="_blank"> <img src="images/s5.jpg" onmouseover="this.src='images/s5r.jpg'; "onmouseout="this.src='images/s5.jpg';" alt="指示牌/標示牌"/> </a> </div>
+          <div class="pic"> <a href="1chanpin/xtygf/18.html" title="指示牌/標示牌" target="_blank"> <img src="images/s5.jpg" alt="指示牌/標示牌"/> </a> </div>
           <div class="info"> <a href="1chanpin/xtygf/18.html" title="指示牌/標示牌"  target="_blank">指示牌/標示牌</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/15.html" title="雷射CNC切割" target="_blank"> <img src="images/s6.jpg" onmouseover="this.src='images/s6r.jpg'; "onmouseout="this.src='images/s6.jpg';" alt="雷射CNC切割"/> </a> </div>
+          <div class="pic"> <a href="1chanpin/xtygf/15.html" title="雷射CNC切割" target="_blank"> <img src="images/s6.jpg" alt="雷射CNC切割"/> </a> </div>
           <div class="info"> <a href="1chanpin/xtygf/15.html" title="雷射CNC切割" target="_blank">雷射CNC切割</a> </div>
           <em></em>
         </li>
